--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ hr{
     border: 5px solid white;
     margin: 0.5rem auto;
     border-radius: 10px;
-    background-color: white;
 }
 
 
@@ -31,7 +30,7 @@ hr{
 /* sezione 2 */
 
 .portfolio-sec hr{
-    color: black;
+    border-color: black;
 }
 
 
@@ -43,6 +42,13 @@ hr{
 }
 
 .about-sec hr {
+    width: 70%;
+}
+
+/* sezione 4 */
+
+.contact-sec hr{
+    border-color: black;
     width: 70%;
 }
 
