--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,7 @@ hr{
 
 
 /************* HEADER *************/
-.nav-bar{
-    background-color: rgb(18, 27, 68);
-    color: white;
-}
 
-.left-nav strong{
-    white-space: nowrap;
-}
-
-.right-nav span{
-    font-size: 0.7rem;
-    cursor: pointer;
-}
 
 
 /************* MAIN *************/
@@ -91,8 +79,11 @@ hr{
     margin: 0 0.5rem;
     border: 1px solid white;
     border-radius: 50%;
-    font-size: 1.5rem;
+    font-size: 1rem;
     cursor: pointer;
+    width: 3rem;
+    height: 3rem;
+    line-height: 1rem;
 }
 
 .up-footer-sec a{
